--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "may-it-be": "0.0.162"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bahrus/o2h.git"
