--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node node_modules/may-it-serve/serve.js"
   },
   "dependencies": {
     "may-it-be": "0.0.162"
+  },
+  "devDependencies": {
+    "may-it-serve": "0.0.0"
   },
   "repository": {
     "type": "git",
