--- a/config.json
+++ b/config.json
@@ -3,13 +3,13 @@
     "wrapperClose": "</form>",
     "objectPropOpen": "<details><summary>$0</summary>",
     "objectPropClose": "</details>",
-    "stringPropOpen": "<label>$0",
+    "stringPropOpen": "<label>$0:",
     "stringPropValue": "<input type='text' value='$0'>",
     "stringPropClose": "</label>",
-    "numberPropOpen": "<label>$0",
+    "numberPropOpen": "<label>$0:",
     "numberPropValue": "<input type='number' value='$0'>",
     "numberPropClose": "</label>",
-    "booleanPropOpen": "<label>$0",
+    "booleanPropOpen": "<label>$0:",
     "booleanPropValue": "<input type='checkbox' $0>",
     "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>$0</summary>",
