--- a/config.json
+++ b/config.json
@@ -1,18 +1,23 @@
 {
     "wrapperOpen": "<form>",
     "wrapperClose": "</form>",
-    "objectPropOpen": "<details><summary>$0</summary>",
+    "objectPropOpen": "<details -mib-><summary>$0</summary>",
+    "objectPropBeProps": "",
     "objectPropClose": "</details>",
     "stringPropOpen": "<label>$0:",
-    "stringPropValue": "<input type='text' value='$0'>",
+    "stringPropValue": "<input type='text' value='$0' -mib->",
+    "stringPropBeProps": "",
     "stringPropClose": "</label>",
     "numberPropOpen": "<label>$0:",
-    "numberPropValue": "<input type='number' value='$0'>",
+    "numberPropBeProps": "",
+    "numberPropValue": "<input type='number' value='$0' -mib->",
     "numberPropClose": "</label>",
     "booleanPropOpen": "<label>$0:",
-    "booleanPropValue": "<input type='checkbox' $0>",
+    "booleanPropBeProps": "",
+    "booleanPropValue": "<input type='checkbox' $0 -mib->",
     "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>$0</summary>",
+    "arrayPropBeProps": "",
     "arrayPropClose": "</details>",
     "arrayItemOpen": "",
     "arrayItemClose": ""
