--- a/config.json
+++ b/config.json
@@ -5,16 +5,16 @@
     "objectPropBeProps": "",
     "objectPropClose": "</details>",
     "stringPropOpen": "<label>$0:",
-    "stringPropValue": "<input type='text' value='$0' -mib->",
+    "stringPropValue": "<input type='text' name='$1' value='$0' -mib->",
     "stringPropBeProps": "",
     "stringPropClose": "</label>",
     "numberPropOpen": "<label>$0:",
     "numberPropBeProps": "",
-    "numberPropValue": "<input type='number' value='$0' -mib->",
+    "numberPropValue": "<input type='number'  name='$1'  value='$0' -mib->",
     "numberPropClose": "</label>",
     "booleanPropOpen": "<label>$0:",
     "booleanPropBeProps": "",
-    "booleanPropValue": "<input type='checkbox' $0 -mib->",
+    "booleanPropValue": "<input type='checkbox'  name='$1' $0 -mib->",
     "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>$0</summary>",
     "arrayPropBeProps": "",
