--- a/config.json
+++ b/config.json
@@ -1,20 +1,20 @@
 {
     "wrapperOpen": "<form>",
     "wrapperClose": "</form>",
-    "objectPropOpen": "<details -mib-><summary>$0</summary>",
+    "objectPropOpen": "<details ${mib}><summary>${label}</summary>",
     "objectPropBeProps": "",
     "objectPropClose": "</details>",
-    "stringPropOpen": "<label>$0:",
-    "stringPropValue": "<input type='text' name='$1' value='$0' -mib->",
+    "stringPropOpen": "<label>${label}:",
+    "stringPropValue": "<input type='text' name='${path}' value='${value}' ${mib}>",
     "stringPropBeProps": "",
     "stringPropClose": "</label>",
     "numberPropOpen": "<label>$0:",
     "numberPropBeProps": "",
-    "numberPropValue": "<input type='number'  name='$1'  value='$0' -mib->",
+    "numberPropValue": "<input type='number'  name='$1'  value='${value}' ${mib}>",
     "numberPropClose": "</label>",
     "booleanPropOpen": "<label>$0:",
     "booleanPropBeProps": "",
-    "booleanPropValue": "<input type='checkbox'  name='$1' $0 -mib->",
+    "booleanPropValue": "<input type='checkbox'  name='$1' $0 ${mib}>",
     "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>$0</summary>",
     "arraySummaryPath": "name",
