--- a/config.json
+++ b/config.json
@@ -8,13 +8,13 @@
     "stringPropValue": "<input type='text' name='${path}' value='${value}' ${mib}>",
     "stringPropBeProps": "",
     "stringPropClose": "</label>",
-    "numberPropOpen": "<label>$0:",
+    "numberPropOpen": "<label>${label}:",
     "numberPropBeProps": "",
-    "numberPropValue": "<input type='number'  name='$1'  value='${value}' ${mib}>",
+    "numberPropValue": "<input type='number'  name='${path}'  value='${value}' ${mib}>",
     "numberPropClose": "</label>",
-    "booleanPropOpen": "<label>$0:",
+    "booleanPropOpen": "<label>${label}:",
     "booleanPropBeProps": "",
-    "booleanPropValue": "<input type='checkbox'  name='$1' $0 ${mib}>",
+    "booleanPropValue": "<input type='checkbox'  name='${path}' ${checked} ${mib}>",
     "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>$0</summary>",
     "arraySummaryPath": "name",
