--- a/config.json
+++ b/config.json
@@ -2,10 +2,9 @@
     "wrapper": ["<form>","</form>"],
     "objectProp": ["<details ${mib}><summary>${label}</summary>", "</details>"],
     "objectPropBeProps": "",
-    "stringPropOpen": "<label>${label}:",
+    "stringProp": ["<label>${label}:","</label>"],
     "stringPropValue": "<input type='text' name='${path}' value='${value}' ${mib}>",
     "stringPropBeProps": "",
-    "stringPropClose": "</label>",
     "numberPropOpen": "<label>${label}:",
     "numberPropBeProps": "",
     "numberPropValue": "<input type='number'  name='${path}'  value='${value}' ${mib}>",
