--- a/config.json
+++ b/config.json
@@ -2,13 +2,9 @@
     "wrapper": ["<form>","</form>"],
     "objectProp": ["<details ${mib}><summary>${label}</summary>", "</details>"],
     "objectPropBeProps": "",
-    "stringProp": ["<label>${label}:","</label>"],
-    "stringPropValue": "<input type='text' name='${path}' value='${value}' ${mib}>",
-    "stringPropBeProps": "",
-    "numberPropOpen": "<label>${label}:",
+    "stringProp": "<label>${label}: <input type='text' name='${path}' value='${value}' ${mib}></label>",
+    "numberProp": "<label>${label}: <input type='number'  name='${path}'  value='${value}' ${mib}></label>",
     "numberPropBeProps": "",
-    "numberPropValue": "<input type='number'  name='${path}'  value='${value}' ${mib}>",
-    "numberPropClose": "</label>",
     "booleanPropOpen": "<label>${label}:",
     "booleanPropBeProps": "",
     "booleanPropValue": "<input type='checkbox'  name='${path}' ${checked} ${mib}>",
