--- a/config.json
+++ b/config.json
@@ -5,10 +5,8 @@
     "stringProp": "<label>${label}: <input type='text' name='${path}' value='${value}' ${mib}></label>",
     "numberProp": "<label>${label}: <input type='number'  name='${path}'  value='${value}' ${mib}></label>",
     "numberPropBeProps": "",
-    "booleanPropOpen": "<label>${label}:",
+    "booleanProp": "<label>${label}: <input type='checkbox'  name='${path}' ${checked} ${mib}></label>",
     "booleanPropBeProps": "",
-    "booleanPropValue": "<input type='checkbox'  name='${path}' ${checked} ${mib}>",
-    "booleanPropClose": "</label>",
     "arrayPropOpen": "<details><summary>${label}</summary>",
     "arraySummaryPath": "name",
     "arrayPropBeProps": "",
