--- a/config.json
+++ b/config.json
@@ -7,10 +7,9 @@
     "numberPropBeProps": "",
     "booleanProp": "<label>${label}: <input type='checkbox'  name='${path}' ${checked} ${mib}></label>",
     "booleanPropBeProps": "",
-    "arrayPropOpen": "<details><summary>${label}</summary>",
+    "arrayProp": ["<details><summary>${label}</summary>", "</details>"],
     "arraySummaryPath": "name",
     "arrayPropBeProps": "",
-    "arrayPropClose": "</details>",
     "arrayItemOpen": "",
     "arrayItemClose": ""
 }
