--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "wrapper": ["<form>","</form>"],
+    "wrapper": ["<form>", "|", "</form>"],
     "objectProp": ["<details><summary>${label}</summary>", "</details>"],
     "stringProp": "<label>${label}: <input type='text' name='${path}' value='${value}' ${mib}></label>",
     "numberProp": "<label>${label}: <input type='number'  name='${path}'  value='${value}' ${mib}></label>",
