--- a/config.json
+++ b/config.json
@@ -4,7 +4,9 @@
     "stringProp": ["<label>", "label", 
                         ": <input type='text' name='", "path", "' value='", "value", 
                     "'></label>"],
-    "numberProp": "<label>${label}: <input type='number'  name='${path}'  value='${value}' ${mib}></label>",
+    "numberProp": ["<label>", "label", 
+        ": <input type='number' name='", "path", "' value='", "value", 
+    "'></label>"],
     "booleanProp": "<label>${label}: <input type='checkbox'  name='${path}' ${checked} ${mib}></label>",
     "arrayProp": ["<details><summary>${label}</summary>", "</details>"],
     "arraySummaryPath": "name"
